tests/baselines/reference/functionCall13.errors.txt
==== tests/cases/compiler/functionCall13.ts (2 errors) ====
    function foo(a:string, ...b:number[]){}
    foo('foo', 1); 
    foo('foo'); 
    foo();
    ~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    foo(1, 'bar');
        ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
    foo('foo', 1, 3);
    